# garmin-planner-api

./: .env.example  README.md  pyproject.toml  requirements.txt
app/: auth.py  db.py  main.py
app/routers/: dev.py  plans.py  race.py  strava.py
app/services/: generator.py  models.py  persistence.py  profile.py  race_lookup.py  sanity_check.py  strava.py
migrations/: 001_initial_schema.sql  002_add_user_id.sql  003_rls_placeholder.sql  004_session_pace.sql  005_strava_tokens.sql
tests/: test_delete_plan.py  test_generate.py  test_import_plan.py  test_matches.py  test_preview.py  test_race_lookup.py  test_strava.py
