[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "garmin-planner-api"
version = "0.1.0"
description = "FastAPI backend for generating Garmin-compatible running plan previews."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "anthropic>=0.52",
    "python-dotenv>=1.0",
    "garminconnect>=0.3.2",
    "supabase>=2.7",
    "pyjwt[crypto]>=2.8",
    "httpx>=0.27",
    "cryptography>=42.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[tool.setuptools.packages.find]
include = ["app*"]
